--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -20,6 +23,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  align-items: center;
+  margin: 4px;
 }
 
 .logo {
@@ -35,6 +40,8 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  display: flex;
+  align-items: center;
 }
 
 a {
@@ -45,4 +52,15 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+  align-items:start;
+  margin: 0px;
+}
+
+.left, .right
+{
+  display: flex;
+  align-items: center
+  gap:16px;
 }
