--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -11,6 +12,22 @@ img {
   font-size: 36px;
   font-weight: 900;
 }
+
+.imagescontainer{
+  display: flex;
+  justify-content: center;
+  gap: 52px
+  ;
+}
+
+.barberry,.chilli,.pepper,.saffron{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+
 
 /* do not edit this footer */
 .footer {
