--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 15px;
+
 }
 
 .icon {
@@ -33,6 +36,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1 0 42px;
+  
 }
 
 .close-button {
@@ -66,4 +71,27 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.question {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  
+}
+
+.prompt {
+  margin: 0px 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.text {
+  text-align: left;
+}
+
+.buttons {
+  display: flex;
+  gap: 0.5em;
 }
